Apache default config

--- a/tasks/apache/00-letsencrypt-ssl.conf.j2
+++ b/tasks/apache/00-letsencrypt-ssl.conf.j2
@@ -3,7 +3,9 @@
 	SSLCertificateKeyFile /etc/letsencrypt/live/{{ main_domain }}/privkey.pem
 	Include /etc/letsencrypt/options-ssl-apache.conf
 
-	<IfModule mod_headers.c>
-		Header always set Strict-Transport-Security "max-age=15552000"
-	</IfModule>
+	<Location />
+		Deny from all
+		Options None
+		ErrorDocument 403 Forbidden.
+	</Location>
 </VirtualHost>
