Centralize all apache configuration in one folder

--- a/tasks/apache/sites-available/000-main.conf.j2
+++ b/tasks/apache/sites-available/000-main.conf.j2
@@ -1,7 +1,12 @@
-<VirtualHost *:80 *:*>
+<Macro default_config>
 	<Location />
 		Deny from all
 		Options None
 		ErrorDocument 403 Forbidden.
 	</Location>
+</Macro>
+
+
+<VirtualHost *:80 *:*>
+	Use default_config
 </VirtualHost>
