Rework apache config management to make it more generic and include ReverseProxy macro

--- a/tasks/apache/conf-available/letsencrypt-ssl.conf.j2
+++ b/tasks/apache/conf-available/letsencrypt-ssl.conf.j2
@@ -1,17 +1,16 @@
-<Macro ssl_stuff $certificate_name>
+<Macro SSLStuff $certificate_name>
 	SSLCertificateFile /etc/letsencrypt/live/$certificate_name/fullchain.pem
 	SSLCertificateKeyFile /etc/letsencrypt/live/$certificate_name/privkey.pem
 	Include /etc/letsencrypt/options-ssl-apache.conf
 </Macro>
 
-
 <VirtualHost *:443>
-	Use ssl_stuff *.{{ main_domain }}
-	Use default_config
+	Use SSLStuff *.{{ main_domain }}
+	Use DefaultDeny
 </VirtualHost>
 
 <VirtualHost *:443>
 	ServerName {{ main_domain }}
-	Use ssl_stuff {{ main_domain }}
-	Use default_config
+	Use SSLStuff {{ main_domain }}
+	Use DefaultDeny
 </VirtualHost>
