--- a/tasks/apache/sites-available/transmission.conf.j2
+++ b/tasks/apache/sites-available/transmission.conf.j2
@@ -1,11 +1,1 @@
-<VirtualHost *:80>
-	ServerName transmission.{{ main_domain }}
-	Redirect permanent / https://transmission.{{ main_domain }}/
-</VirtualHost>
-
-<VirtualHost *:443>
-	ServerName transmission.{{ main_domain }}
-
-	ProxyPass "/" "http://localhost:{{ transmission_rpc_port }}/"
-	ProxyPassReverse "/" "http://localhost:{{ transmission_rpc_port }}/"
-</VirtualHost>
+Use ReverseProxy transmission.{{ main_domain }} {{ transmission_rpc_port }}
