--- a/tasks/apache/sites-available/vaultwarden.conf.j2
+++ b/tasks/apache/sites-available/vaultwarden.conf.j2
@@ -1,11 +1,1 @@
-<VirtualHost *:80>
-	ServerName {{ vaultwarden_domain }}
-	Redirect permanent / https://{{ vaultwarden_domain }}/
-</VirtualHost>
-
-<VirtualHost *:443>
-	ServerName {{ vaultwarden_domain }}
-
-	ProxyPass "/" "http://localhost:{{ vaultwarden_port }}/"
-	ProxyPassReverse "/" "http://localhost:{{ vaultwarden_port }}/"
-</VirtualHost>
+Use ReverseProxy {{ vaultwarden_domain }} {{ vaultwarden_port }}
