--- a/tasks/apache/sites-available/vaultwarden.conf.j2
+++ b/tasks/apache/sites-available/vaultwarden.conf.j2
@@ -1,1 +1,1 @@
-Use ReverseProxy {{ vaultwarden_domain }} {{ vaultwarden_port }}
+Use ReverseProxy {{ vaultwarden_domain }} {{ vaultwarden_port }} *
